2008-04-30  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (extract_keyword): Return early if first char is
	not a comment character.
	(read_ascii_data): Accept .nargin. and .nargout. as valid identifiers.

	* ov-fcn-handle.cc: Combine tests.  Test saving and loading
	handles for built-in, .oct, and .m functions.
	(octave_fcn_handle::save_ascii, octave_fcn_handle::save_binary,
	octave_fcn_handle::save_hdf5, octave_fcn_handle::print):
	Avoid dereferencing invalid pointer.

	* data.cc: Fix tests.  Use "%!assert", not "%! assert" for
	individual assert tests.

2008-04-30  Jaroslav Hajek <highegg@gmail.com>

	* ov-base.cc, ov-base.h, ov-bool-mat.h, ov-bool-sparse.h,
	ov-bool.h, ov-complex.cc, ov-complex.h, ov-cx-mat.cc, ov-cx-mat.h,
	ov-cx-sparse.cc, ov-cx-sparse.h, ov-intx.h, ov-range.h,
	ov-re-mat.cc, ov-re-mat.h, ov-re-sparse.cc, ov-re-sparse.h,
	ov-scalar.cc, ov-scalar.h, ov.h:
 	Provide log2 mapper function.
	* data.cc (Flog2): New function.

2008-04-25  John W. Eaton  <jwe@octave.org>

	* pt-stmt.h (tree_statement_list::function_body): New data member.
	(tree_statement_list::tree_statement_list): Initialize it.
	(tree_statement_list::mark_as_script_body): New function.
	(tree_statement::maybe_echo_code, tree_statement::eval):
	Rename in_function_body argument to in_function_or_script_body.
	* pt-stmt.cc (tree_statement::eval): Only set statement in call
	stack if in_function_or_script_body is true.

	* pt-stmt.cc (tree_statement_list::eval): Call elt->eval with
	function_body || script_body.
	* ov-usr-fcn.cc (octave_user_script::octave_user_script):
	command list as script body here.
	(octave_user_function::octave_user_function):
	Mark command list as function body here.
	* parse.y (start_function, make_anon_fcn_handle): Not here.

	* toplev.h, toplev.cc (octave_call_stack::backtrace,
	octave_call_stack::do_backtrace): New arg, N.  Skip innermost N
	stack frames.

	* debug.cc (F__dbstack__): New function.
	(current_stack_frame): New static variable.
